# actix_web_csp

./: BENCHMARKS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  deny.toml
.github/workflows/: benchmarks.yml  ci.yml
benches/: csp_benchmark.rs
examples/: csp_security_tester.rs  real_world_test_fixed.rs  walkthrough_basic_policy.rs  walkthrough_nonce_flow.rs  walkthrough_presets_and_json.rs
src/: config.rs  constants.rs  directives.rs  error.rs  hash.rs  lib.rs  main.rs  middleware.rs  perf.rs  policy.rs  prelude.rs  presets.rs  source.rs  utils.rs  verify.rs
src/core/: config.rs  directives.rs  interop.rs  mod.rs  policy.rs  source.rs
src/middleware/: csp.rs  extensions.rs  mod.rs  reporting.rs
src/monitoring/: mod.rs  perf.rs  report.rs  stats.rs
src/security/: hash.rs  mod.rs  nonce.rs  verify.rs
tests/: basic_csp_test.rs  browser_test.html  helpers.rs  integration_tests.rs  mod.rs  presets.rs  property_roundtrip.rs  utils.rs
tests/core/: config.rs  interop.rs  mod.rs  policy.rs  source.rs
tests/middleware/: csp.rs  extensions.rs  mod.rs
tests/monitoring/: mod.rs  perf.rs  stats.rs
tests/security/: hash.rs  mod.rs  nonce.rs  verify.rs
